@@ -1,5 +1,9 @@
 2011-11-23  Guillaume Lazzara  <z@lrde.epita.fr>
 
+	* lrde-scmstats.sh: Compute stats per branches.
+
+2011-11-23  Guillaume Lazzara  <z@lrde.epita.fr>
+
 	* lrde-upload.sh: Update list of branches.
 
 2011-10-06  Roland Levillain  <roland@lrde.epita.fr>
